lab1/Test/L1-A-10-11.cmm
struct Qb9xnerrj6K Ff6sN9ogglDG4Wbm 
;
struct {
  struct k_M86Zlh5i4ozy {
  }cZSEMRGK6JxyJ5xdPxg ;
};
float ao8GpR1LUAcMFy ( int bKyuUXIXbT ) {
  if ( _ )   return E1HyHM8A_ = AOPS || c && nHx1eEJew9NfDtfy7W4 
    / - ! KzSYWTWo9RZ [ gyhzj < _4 - wt74PYd7Lfv_fkqb_V 
    ( U6QFJ6Uou1ieFPPL , kjwdhcoav6Tvr || x1Pw5GXsybvcY 
    != TSZ_UJFY9A6jBE + ( CJkq4KVHRrXbpAWZA = d3LxO2 || 
    R_5qTUDjsB > Zz0SKpnccELk ( sECM8j18qrM3 >= X + Fap 
    * ( TgayqaMz5p1V42t == IL ) / 1460986343.847913222 
    <= ! prVTD2UnSH ) - 1425426263 ) * - ! MJbeHqY9 ( 
    ) . co1GUw6k8H ) #] ;

}
struct aVrykA0OyEKPN ehp25zpf , rUwy6wwHAlFG9N6tlmkS 
  [ 573326409 ] 

;
struct VTnvnJVwUhN1QX ;
struct @{
  int EFS9nMKuVA ;
  int P , IipoS7_JrlPhk_1dj , &PA1WE = a8n665a1fJz6 
    ;
};
int ;
int ;
int vs94EOMGDTMGxcNAn0 ( ) {
}
int ;
int ;
int ;
int ;
int JtARd3_qSIjptbOE0 ( int f , int ol3Srtxwlph49jn8x6se 
  ) {
  Xf5AZXnGZFiO ;
  C51yIZEIVT3yV ;
  Tg8PmjEhLVZd7LebeH ;
  if ( T9dZ3kY0VF )   RnA ;
else   if ( GlBk )   PUDlR_hKxCfv ;
else   if ( rG1Mah572JI0S )   if ( tt0T0oNUVyHx0m5 
    )   if ( XdGPpW2MaOpTe5q if )   while ( GnHN_qeovx 
    )   AYY ;

else {
    WE2ICBGVM5Cem1V ;
  }




}
int WhxM ( ) {
int }
@